Comment reading and writing appears to work